*Empty MediaWiki Message*

--- a/Frieja.mw
+++ b/Frieja.mw
@@ -2,7 +2,7 @@
 
 '''Freya''' (ouk wal eskreaven as '''Freja''', '''Freia''' of '''freyja''') is in et [[Germaanse mythologie|germaanske volksgelöyv]] de godinne van [[leevde]], skounheid, vrüchtbårheid, [[Seksualiteit|seks]], [[oorlog]], gold en seiðr-magy. See hevt ne halskeatene ''Brísingamen'', ridt up ne kåre med twey katten der vöär, hevt geselskap van et swyn [[Hildisvíni]] en hevt nen mantel van valkenveaderen. See is gek up leevdesleedkes en löt sik makkelik anbidden. Med öären man [[Óð]] hevt see twey dochters, [[Hnoss]] en [[Gersemi]]. Med öären tweylingbröder [[Frey]], öären vader [[Njörd]] en öären moder (den as ne süster is van Njörd, mär wår as vanuut de brunnen ginnen name van bekend is) is see eyne van de [[Wanen]]. 
 
-Freya heyrst oaver en heamelsk veld, [[Volkvanger]] (Fólkvangr). See krigt de hälvde van dee wat up slagvelden ümmekummet, de andere hälvde is vöär Wodens halle [[Walhalla]]. Binnen Volkvanger steyt öäre halle Seskamer (Sessrúmnir). Freya helpet vake andere goden döär se öären veadermantel te leynen, wördt anbeaden by allerhande leevdes- en vrüchtbårheidssaken en krigt regelmåtig trouwversöken van starke [[Jotun|jötnar]]. Freya's kearl, den god Ood (Óðr) is der vake neet. See göälet trånen van roud gold vöär em en söcht em regelmåtig under skuulnamen, sou as ''Gefn'', ''Hörn'', ''Mardöll'', ''Sýr'', en ''Vanadís''.
+Freya heyrst oaver en heamelsk veld, [[Volkvanger]] (Fólkvangr). See krigt de hälvde van dee wat up slagvelden ümmekummet, de andere hälvde is vöär Wodens halle [[Valhalla]]. Binnen Volkvanger steyt öäre halle Seskamer (Sessrúmnir). Freya helpet vake andere goden döär se öären veadermantel te leynen, wördt anbeaden by allerhande leevdes- en vrüchtbårheidssaken en krigt regelmåtig trouwversöken van starke [[Jotun|jötnar]]. Freya's kearl, den god Ood (Óðr) is der vake neet. See göälet trånen van roud gold vöär em en söcht em regelmåtig under skuulnamen, sou as ''Gefn'', ''Hörn'', ''Mardöll'', ''Sýr'', en ''Vanadís''.
 
 Et is neet düdelik up wat vöär ne wyse of Freya anbeaden wör. Ouk meynet wat geleyrde lüde at Freya feitelik deselvde godinne is as [[Frigg]], de vrouwe van [[Woden]].
 
@@ -20,7 +20,11 @@ In de dicht-edda steyt Freya in de gedichten ''Völuspá'', ''Grímnismál'', ''
 
 ''Völuspá'' hevt en vers wårin as see "Ood syn mäken" enöömd wördt. Freya is ja de vrouwe van Óðr. Volgens et vers was Freya versegd an nen neet-enöömden bouwer, den as later nen jötunn blikt te weasen. Donar düt em doud, wat uutvorig beskreaven steyt in höyvdstükke 42 van de ''Gylfaginning''. In et gedicht ''Grímnismál'' vertelt Woden (vermumd as Grímnir) an nen jungen Agnar dat Freya alle dage stöle vryhöldt in öäre halle up Volkvanger, vöär de hälvde van de lüde wat ümmekummet up et slagveld. Woden krigt dan de andere hälvde.
 
+'''''Lokasenna'''''
+
 In et gedicht ''Lokasenna'' beskuldigt stoakegod [[Loki]] sowat alle vrouwlüde an tåfel van lösbandigheid en untrouw. Freya kümt em achteruut den hals temöte. In et begin van et gedicht steyt dat Freya by en feast is van Ægir. Nådat Loki nen set eflyted hevt med de godinne Frigg, kümt Freya der tüsken. See nöömt Loki nen halven gek, dat hee syne nåre streyken der by haalt en dat Frigg et lot van alleman weat, al sal see niks seggen. Loki segt dat see de lippe müt holden en dat hee genog van öär weat - dat Freya der ouk neet underuut kümt, ümdat see med alle goden en elven in de halle hevt liggen knoien. Freya löt sik upporken. See kümt up de achterste beyne en nöömt Loki nen löägenbüdel, dat hee gewoan gaerne dikke babbels hevt en dat hee med den start tüsken de beyne up huus an kan, want hee hevt alle goden hellig emaked. Loki segt öär weader de lippe te holden, nöömt öär ne kwåde hapskaere en sogt en verhaal uut den duum wårby as Freya boavenup öären bröder trappeerd wördt döär de lachende goden. Njörd kümt der tüsken. Hee meynt dat der gin kwåd an is as ne vrouwe mangs under den dråd hen vreat, en hee wist der up dat Loki selv kinder eboard hevt en nöömt em ne smearpype. Sou geyt et noch nen set wyder.
+
+'''''Þrymskviða'''''
 
 In et gedicht ''Þrymskviða'' leynt Loki Freya syn veadermantel en verkleydet Donar sik as Freya üm de hitsige jötunn Þrymr by den buk te doon. In et gedicht wördt Donar wakker en untdekket dat synen hamer [[Mjöllnir]] vord is. Donar vertelt et Loki, en med mekander gåt se når den prachtigen hov van Freya. Donar vrögt of hee öären mantel leynen mag üm synen hamer weader te vinden. Freya vindt et good. Loki vlögt der up uut med de susende veadermantel. In et land Jötunheim süt hee Þrymr up nen barg sitten. Den vertelt em dat hee Donar synen hamer depe in de aerde verbörgen hevt en dat nüms der ooit achterkumt wår, behalve as se em Freya te trouwen brengt. Loki vlögt weaderümme med den susenden mantel. In de godenhalle vertelt Loki allens an Donar. Te houpe gåt se når Freya. Donar segt Freya en mooi kleyd an te trekken en nen bruudssloier up et höyvd te doon, want se gåt når Jötunheim. Freya wördt hellig, want wat meynt Donar wal neet. De godenhallen sküddet der van, sou hellig. Öäre halskeatene Brísingamen valt öär van den hals. 
 
