--- a/Valhalla.mw
+++ b/Valhalla.mw
@@ -6,3 +6,6 @@ Valhalla is ne majestuöse, machtige halle den as steyt in [[Asgard|Asgaard]]. E
 Valhalla wördt enöömd in den dichtedda, upesteld in den 13. eywe uut eyrdere traditionäle brunnen, en in de verhaaledda (daleskreaven in den 13. eywe döär [[Snorri Sturluson]]), in ''Heimskringla'' (ouk eskreaven in den 13. eywe), un in de versen van  Eiríksmál, en gedicht van nen unbekenden skryver uut den 10. eywe oaver den doud van Erik Bloodakse. 
 
 Der sint untelbåre kunstwarken en uutgaves oaver Valhalla maked. In de popkultuur kümt Valhalla regelmåtig weaderümme en et is en geleevd tema binnen [[metal]]-kringe.
+
+[[Kategorie: Tweants artikel]]
+[[Kategorie: Germaanse mythologie]]
