[[:Kategorie:Mythisch stee]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Valhalla.mw
+++ b/Valhalla.mw
@@ -9,3 +9,4 @@ Der sint untelbåre kunstwarken en uutgaves oaver Valhalla maked. In de popkultu
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Germaanse mythologie]]
+[[Kategorie:Mythisch stee]]
