*Empty MediaWiki Message*

--- a/Michael_van_Gerwen.mw
+++ b/Michael_van_Gerwen.mw
@@ -1,4 +1,4 @@
-[[file:Michael van Gerwen 6-5 Krzysztof Ratajski - Michael van Gerwen - 2019251192935 2019-09-08 PDC European Darts Matchplay - 0122 - B70I7359.jpg|thumb|Michael van Gerwen (2019)]]
+[[file:2022-06-13 Play-offs (2022 Premier League Darts) by Sandro Halank–168.jpg|thumb|Michael van Gerwen (2022)]]
 '''Michael van Gerwen''' ([[Boxtel]], [[25 april]] [[1989]]), bi'jname 'Mighty Mike', is nen [[Nederlaand]]sen [[darts|darter]]. Hee won op 1 januari 2014 as jongsten spöller aller tieden t [[PDC World Darts Championship]], naodat e daor n jaor eerder al de finale van haalden. t Winnen van dissen wedstried zorgden der ok veur dat e in 2014 as eerste op de weeldranglieste steet.
 
 {{DEFAULTSORT:Gerwen, Michael van}}
