wat kleine verbetteringen

--- a/Asgard.mw
+++ b/Asgard.mw
@@ -1,21 +1,21 @@
-'''Asgard''' ([[Ooldnoors|Oldnoords]]: '''''Ásgarðr''''') is in de [[Noord-Europa|Noord-Europese]] [[mythologie]] de plaatse woar de [[Asen]] en [[Asin]]nen (de [[god]]en) wonden, dee los wodt ezene van de weald woar de mensen wont ([[Midgard]]), en zich of in de ruumte, of in et centrum van de weald bevund. Allenig de weald-as [[Yggdrasil]] deurdrönk alle sferen (wealden) in de Noordse kosmogonie en verbundt zie op disse manere in de deepte van et heelal.
+'''Asgard''' ([[Ooldnoors|Oldnoords]]: '''''Ásgarðr''''') is in de [[Noord-Europa|Noord-Europese]] [[mythologie]] de plaatse woar de [[Asen]] en [[Asin]]nen (de [[god]]en) wont, dee los wodt ezene van de weald woar de mensen wont ([[Midgard]]), en zich of in de ruumte, of in et centrum van de weald bevund. Allenig de weald-as [[Yggdrasil]] deurdrönk alle sferen (wealden) in de Noordse kosmogonie en verbindt zie op disse manere in de deepte van et heelal.
 
 ''Asgard'' wöd deur ne unoaverkommeleke mure umgaeven, ebouwd door nen reus, noa den krieg mit de [[Wanen]]. Zee ok [[Svadilfari]].
 
 Den enige verbinding tussen Midgard en Asgard is deur de [[Bifröst]]brugge, ne reagenboogbrugge, dee deur [[Heimdall]] bewaakt wöd.
 
 == Eursprong en nut ==
-''Asgaard'' wöd in de Noord-Europese mythologie ebouwd deur [[Wodan]] en ziene breurs mit de hulpe van enkele [[Thursen]]. Dit was noadat de oerweald in den [[Ginnungagap]] zich deur de warking van vuur en ies evörmd had en noadat de meeste oerreuzen waren ummekommen deur et opofferen van dee oerweald ([[Ymir]]).
+''Asgaard'' wöd in de Noord-Europese mythologie ebouwd deur [[Wodan]] en ziene breurs mit de hulpe van enkele [[Thursen]]. Dit is noadat de oerweald in den [[Ginnungagap]] zich deur de warking van vuur en ies evörmd hef en noadat de meeste oerreuzen bunt ummekommen deur et opofferen van dee oerweald ([[Ymir]]).
 
-Et centrum van Asgard is et [[Idavoll]] veld. Doar in dat centrum leet Wodan (of [[Odin]]) n paleis [[Gladsheimr]] bouwen mit nen troon veur zichzelf [[Hlidskjalf]], vanwoar hi-j op alle 9 wealden kan uutkieken, en nog 12 aandere tronen veur Asen dee hi-j beneumden om samen mit um te heersen. Veur de Asinnen wöd der et paleis [[Vingolf]] ebouwd en later veur de helden ok et [[Valhalla]].
+Et centrum van Asgard is et [[Idavoll]]-veld. Doar in dat centrum löt Wodan (of [[Odin]]) n paleis [[Gladsheimr]] bouwen mit nen troon veur zichzelf [[Hlidskjalf]], vanwoar hi-j op alle 9 wealden kan uutkieken, en nog 12 aandere tronen veur Asen dee hi-j beneumt om samen mit um te heersen. Veur de Asinnen wöd der et paleis [[Vingolf]] ebouwd en later veur de helden ok et [[Valhalla]].
 
-Et bunt dee plaetse woar de Goden vergoadering heelden oaver belangrieke dingen. Dageleks kwamen zi-j ok bi-j mekare bi-j den [[Bron van Urd]] onderan den wortel van den wealdboom [[Yggdrasil]] om doar den drank der wiesheid te drinken.
+Et bunt dee plaetse woar de Goden vergoadering höldt oaver belangrieke dingen. Dageleks komt zi-j ok bi-j mekare bi-j den [[Bron van Urd]] onderan den wortel van den wealdboom [[Yggdrasil]] om doar den drank van de wiesheid te drinken.
 
-Den steenreus [[Hrimthur]] bouwden de mure in et veuruutzicht as belonning doarveur [[Freya]] as vrouwe, net as de Zunne en de Moan te meugen bezitten. Op listigen road van [[Loki]] wöd deur de Asen nen oaverenkumst mit um emaakt dat den helen bouw in krap 6 moanden kloar zol motten wean, iets wat ze voor onmeugelek oetvoerboar aanzaggen. Hrimthur nam dee veurweerden an, as e ok zien peerd [[Svadilfari]] moch bruukn. 
+Den steenreus [[Hrimthur]] bouwt de mure, met in et veuruutzicht as belonning doarveur [[Freya]] as vrouwe, net as de Zunne en de Moan te meugen bezitten. Op listigen road van [[Loki]] wöd deur de Asen nen oaverenkumst mit um emaakt dat den helen bouw in krap 6 moanden kloar zol motten wean, iets wat ze voor onmeugelek oetvoerboar anzeet. Hrimthur nemp dee veurweerden an, as e ok zien peerd [[Svadilfari]] mag bruken. 
 
-Tot groten schrik van de Asen lek Hrimthur et kloar zullen spöllen et wark binnen den gestelden termien af te hebben, want net dree dage veur den slottermien ontbrak nog enkelt ne poortenboage. Toon veranderden Loki zich in ne merrie en verleidden den hengst Svadilfari den mit de merrie n tiedken vortging. (De merrie baarden doarnoa Wodens hengst [[Sliepnir]]). De reus kon zien kontrakt dus neet noakommen en leet zich roazend van hellegheid as reus gelden, woarnoa [[Thor]] um mit zienen magiesen hamer kapotheeuw.
+Tot groten schrik van de Asen lek Hrimthur et kloar te zullen spöllen et wark binnen den gestelden termien af te hebben, want net dree dage veur den slottermien ontbrek nog enkelt ne poortenboage. Loki verandert zich in ne merrie en verleidt den hengst Svadilfari den mit de merrie n tiedken vortgeet. (De merrie baart doarnoa Wodens hengst [[Sliepnir]]). De reus kan zien kontrakt dus neet noakommen en löt zich roazend van hellegheid as reus gelden, woarnoa [[Thor]] um mit zienen magiesen hamer kapothauwt.
 
-Asgard is nen reusachtigen vestenburcht, n soort hemelriek, mit as belangriekste bestaanddelen de 12 paleizen van de goden woarvan [[Grimnismal]] vertelt. Dee 12 hemelburchten zollen uut gold en edelsteen emaakt wean, de gewelven uut golden speren. Muren en vloeren mit gold bedekt, en op den daeke straalt schilden van helden in plaatse van de zunne en moan. Et hoes van Thor, [[Thrudheim]], wödt neet tot de heamelburchten erekkent, want dee steet te kort bi-j de eerdse weald en göf de grenze an tussen Asgard en Midgard.
+Asgard is nen reusachtigen vestenburcht, n soort hemelriek, mit as belangriekste bestaanddelen de 12 paleizen van de goden woarvan [[Grimnismal]] vertelt. Dee 12 hemelburchten zollen uut gold en edelsteen emaakt wean, de gewelven uut golden speren. Muren en vloeren mit gold bedekt, en op den daeke straalt schilden van helden in plaatse van de zunne en moan. Et hoes van Thor, [[Thrudheim]], wödt neet tot de heamelburchten erekkend, want dee steet te kort bi-j de eerdse weald en göf de grenze an tussen Asgard en Midgard.
 
 == De 12 Paleizen en eure ''bezitters'' ==
 De riege is alfebeties edoane:
