*Empty MediaWiki Message*

--- a/Azerbaidjan.mw
+++ b/Azerbaidjan.mw
@@ -6,7 +6,7 @@
 | breedtegroad= 40/6//N | lengtegroad= 47/19//E | regio=Kaukasus
 | sproaken = [[azerbaidjaansk]]
 | heufdstad = [[Baku]]
-| religie = [[islam]]
+| religie = 
 | regeringsvorm = [[republik]]
 | km2 = 86.600  | pctwater = 0,6
 | inwonners = 9.590.159 | dichtheid = 110,7
