*Empty MediaWiki Message*

--- a/Azerbaidjan.mw
+++ b/Azerbaidjan.mw
@@ -58,6 +58,7 @@ Töt an de tachttiger jåren van et [[20e eeuw|20. jårhunderd]] kömmen der år
 {{bron|<references/>}}
 
 [[Kategorie:Tweants artikel]]
+[[Kategorie:Azerbaidjan| ]]
 [[Kategorie:Laand]]
 [[Kategorie:Europa]]
 [[Kategorie:Azië]]
