*Empty MediaWiki Message*

--- a/Nagorno-Karabach.mw
+++ b/Nagorno-Karabach.mw
@@ -26,6 +26,4 @@ Bestaand:Republic of Artsakh map.png|
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
-[[Kategorie:Laand]]
-[[Kategorie:Europa]]
-[[Kategorie:Azië]]
+[[Kategorie:Azerbaidjan]]
