--- a/Weesp.mw
+++ b/Weesp.mw
@@ -37,7 +37,7 @@ In Weesp hebt sinds olde tieden veul möllens estoan, dee noe vort bunt, op dree
 [[De Horn]] en [[Uitermeer]].
 
 == Fusie gemeenten ==
-Den gemeenteroad van Weesp hef den wöns uutesprokken om samen te goan mit de gemeenten [[Bussum]], [[Muden]] en [[Naarden]]. Gemeente Bussum zöt meer in een samengoan mit alleneg de gemeente Naarden. Een samengoan van Weesp en Muden is ok meugelek.
+Den gemeenteroad van Weesp hef den wöns uutesprokken om samen te goan mit de gemeenten [[Bussum]], [[Muden]] en [[Naarden]]. Gemeente Bussum zöt meer in een samengoan mit alleneg de gemeente Naarden. Een samengoan van Weesp en Muden is ok meugelek. Uutendelik is de gemeente op 24 meert 2022 bie [[Amsterdam]] etrökken.
 
 == Wettensweerdegheden ==
 Nen (geboorn) Weesper wöd ok wal nen [[Weesper mop]] eneumd; verneumd noar et plaetseleke amandelkeuksken.
