[[commons:File:Mallinckrodt.jpg|Mallinckrodt.jpg]] is vervungen deur [[commons:File:Bernhard_von_Mallinckrodt.jpg|Bernhard_von_Mallinckrodt.jpg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]:

--- a/Christoph_Bernhard_von_Galen.mw
+++ b/Christoph_Bernhard_von_Galen.mw
@@ -11,7 +11,7 @@
 == leawn ==
 Christoph Bernhard wör geboorn in ''Haus Bisping'', as n euldstn van veer wichter in ne oadelike [[femilie (historisch)|femilie]], dee't duur geleufszaakn oonderling verskel hadn. Hee wör [[Rooms-Katholieke Karke|Roomsk]] op evoedt duur zinn eum Hendrik van Galen, noa at zin vaa Theodorik in 1607 vuur 12 joar laank in t gevangenhoes in de [[burcht|borg]] van Bevergern köm (rechtevoort is det [[gemiente (bestuur)|gemeente]] [[Hörstel]]), umdet he zol dr ene vermoord hebn um n verskel oawer nen jachthoond. Zin moo, Katriene van Hörde, leut zik vriewillig bie zinnen kearl opsloetn, den't in [[1619]] wier vrie köm. Bearnd kreeg oonderwies in Meunster van de [[Jezuïeten]] en noa zinne studie [[filosofie]] in [[Mainz]] en [[Köln]] studeerden he rechten in [[Leuven]] en [[Bordeaux (stad)|Bordeaux]]. In 1630 kreeg he woark bie t bisdom van Meunster. Zin doel was um t [[protestantisme|protestaantisme]] terugge te woarken duur t skool- en oarmenstelsel an te pakn in zin [[bisdom]]. Hee gung joarliks bie zinne preesters kort bie de greanze an um te kiekn wo of ze t deedn, vake onherkenber en on-anekondigd. In 1648 was he as oonderhaandelsman betrökken bie de [[Vrea van Westfalen|Vrea van Westfaaln]], doo't de stad neutraal wör verkloard en ongevear 5.800 inwonners har.
 
-[[Bestaand:Mallinckrodt.jpg|thumb|left|300px|Bernhard von Mallinckrodt, 1650]]
+[[Bestaand:Bernhard von Mallinckrodt.jpg|thumb|left|300px|Bernhard von Mallinckrodt, 1650]]
 
 In [[1650]] wör he an eweezn as bisskop van Meunster, as opvolger van [[Ferdinand van Beieren]], en t joar doarop in ewiejdt. Van Galen probeern um van zin bisdom ne eankelhearsersstoat te maakn in plaatse van duurgaanks- of bezettingsgebeed vuur leagers soldoatn oet [[Bremen]], [[Osnbrugge]], vörstendomn [[Vörstendom Verden|Verdn]], [[Minden]], [[Sticht Herford]] of Hessen.
 <ref>Matzner, F. & U. Schulze (1997) Barock in Westfalen, p. 20-21.</ref> Duur t ofkoopn van de Zweedse bezetting was [[Hartogdom Westfalen|Westfaaln]] veroarmd ewördn, en opheuging van de belastingen skeut n hoop volk in t verkeerde haalsgat. Van Galen gebreuk de [[koarkelike tucht]] en leut zinnen teegnhanger, [[Bernhard van Mallinckrodt]], den't nog aait nit eens kon wordn met de beneuming van Van Galen, nit mear in t [[Kapittel]] komn.
