/* Ankumst van de Europeanen */

--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -40,6 +40,7 @@ De populäärste sport is [[vootbal]]. Koaken doot se vake med heyte krüden un 
 De eilände van São Tomé un Principe untstünden ungeväär 30 miljoon jår weaderümme döär vulkaniske warking under water langs de [[Kameroonlyne]]. Döär wesselwarking med seywater un dan weader es ne uutbörsting, sint verskillende soorten rotsen un mineralen up mekander stapeld.
 
 === Ankumst van de Europeanen ===
+[[Bestaand:Johannes Vingboons - 't eylant St. Thome (1665).jpg|duum|274x274px|Kaarte van São Tomé, teykend döär Johannes Vingboons (1665)]]
 Rund de jåren 1470 kümmen de portugeysken as eyrste Europeanen up de eilanden, dee as dotyds unbewoand warren. De eyrsten warren [[João de Santarén]] un [[Pêro Escobar]]. De portugeysken deaden de eilanden verkennen un beslöäten dat et gode uutvalspösten warren vöär handel med et vasteland.
 
 De dåtums wårup as se kümmen wordet up den [[21 december|21. december]] egeaven ([[St. Tomasdag]]) [[1471]] vöär São Tomé un [[17 jannewaori|17. January]] ([[St. Töänisdag]]) [[1472]] vöär Príncipe. Andere brunnen geavet weader andere dåtums. Príncipe wör eyrst St. Töänis enöömd, mär in [[1502]] wör den name veranderd in ''Ilha do Príncipe'' (Prince syn eiland), as verwysing når den prince van Portugal den as geld kreag van de sukerupbrengsten van et eiland.
