−[[Kategorie:Laand]]; −[[Kategorie:Europa]]; −[[Kategorie:Azië]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Azerbaidjan.mw
+++ b/Azerbaidjan.mw
@@ -1,7 +1,7 @@
 {{Laandtabel-twd
 | naaminlaandssproak =  Azərbaycan Respublikası<br>Azerbaidjaanske Republik
-| vlagge = Flag of Azerbaijan.svg|120px|Vlagge van Azerbaidjan
-| woapn = Emblem_of_Azerbaijan.svg|90px|Wåpen van Azerbaidjan
+| vlagge = Flag of Azerbaijan.svg
+| woapn = Emblem of Azerbaijan.svg
 | lokasie = Azerbaijan (orthographic projection).svg
 | breedtegroad= 40/6//N | lengtegroad= 47/19//E | regio=Kaukasus
 | sproaken = [[azerbaidjaansk]]
@@ -28,7 +28,7 @@ Van [[12 juni|12]] töt en med [[28 juni]] [[2015]] wördden de eyrste [[Europee
 Den name ''Azerbaidjan'' bedüüdt ''Land van vüür'', vanweage de steades wår as der gas uut de rotsen löp en mangs in brand vlög. Disse natuurfakkels brandet al verskeidene eywen.
 
 ==Land==
-[[File: Azerbajiani_landscape_-_Another_version.jpg|thumb|192x192px|Et azerbaidjaanske landskop in et Khinalugdal|left]] 
+[[File: Azerbajiani landscape - Another version.jpg|thumb|192x192px|Et azerbaidjaanske landskop in et Khinalugdal|left]] 
 Van de dree kaukasusrepubliken is Azerbaidjan et vlakst. Azerbaidjan ligt up dree bargkettens: den [[Grouten Kaukasus]], den [[Kleinen Kaukasus]] en de [[Talysj-bargen]].
 
 Et land hevt 8359 rivyren. Mär de meysten sint neet länger as 25 km. Den höygsten barg is de [[Bazardüzü]] med 4466 meter. De bekendste rivyren van Azerbaidjan sint de [[Kura]] en de [[Aras]].
@@ -59,6 +59,3 @@ Töt an de tachttiger jåren van et [[20e eeuw|20. jårhunderd]] kömmen der år
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Azerbaidjan| ]]
-[[Kategorie:Laand]]
-[[Kategorie:Europa]]
-[[Kategorie:Azië]]
