[[:Kategorie:Azerbaidjan]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Azerbeidzjanen.mw
+++ b/Azerbeidzjanen.mw
@@ -14,3 +14,4 @@ De cultuur van de Azerbeidzjanen hef [[Kaukasisch Albanië|Kaukasische]], Iraans
 [[Kategorie:Azië]]
 [[Kategorie:Iran]]
 [[Kategorie:Volk]]
+[[Kategorie:Azerbaidjan]]
