[[:Kategorie:Oorlog]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Börgeroorlog.mw
+++ b/Börgeroorlog.mw
@@ -1,1 +1,3 @@
-Nen '''bürgeroorlog''' is nen oorlog tüsken bürgers van eyn land, al könnet ander landen derby betrökken råken. Bürgeroorlogen wördet vake uutevuchten üm religiöse, etniske of politike readenen, mår soms is et jüüst nen styd tüsken twey rivaliserende gropen. Den stryd kan in de vorm kommen van slachtingen of sölvs genocide (völkermoord). Ouk döär den vake langdurenden stryd is et antal slachtoffers van de gemiddelde bürgeroorlog houg.
+Nen '''bürgeroorlog''' is nen [[oorlog]] tüsken bürgers van eyn [[Staot|land]], al könnet ander landen derby betrökken råken. Bürgeroorlogen wördet vake uutevuchten üm religiöse, etniske of politike readenen, mår soms is et jüüst nen styd tüsken twey rivaliserende gropen. Den stryd kan in de vorm kommen van slachtingen of sölvs [[genocide]] (völkermoord). Ouk döär den vake langdurenden stryd is et antal slachtoffers van de gemiddelde bürgeroorlog houg.
+
+[[Kategorie:Oorlog]]
