--- a/Haorste.mw
+++ b/Haorste.mw
@@ -21,6 +21,8 @@
 '''Haorste''' ([[Zwols]]: ''Öörst'', [œː<small>ʀ</small>st]) is een buurtschop en buurt in de [[gemiente (bestuur)|gemiente]] [[Zwolle]]. Haorste lig in de wiek [[Vechtlaanden]] en maakt daor samen met [[Brinkershoeke|Brinkers-oeke]] en [[Langen-olte]] diel vanuut. In [[2017]] ad Haorste 265 inwoners op een gebied van 13,10 veerkante kilometer. De buurt Haorste is met een bevölkingsdichtheid van 20,2 dunbevolkt. In Haorste woont veural [[boer|boeren]]. Ten oosten van de [[Rieksweg 28|A28]] lig de polder [[Haorstermärkte]]. Töt [[1 augustus]] [[1967]] beheurden Haorste töt de gemiente [[Zwollerkärspel]]. Zo midden in de buurt lig de egräven [[Bomhofsplasse]]. In et westen löp de [[Vechte]].
 
 == Geschiedenisse ==
+In 1381-1388 kump de näme Haorste veur as Haerste en in 1665 as Haerst. De näme wördt ouk wel upevat as haar-sete, en nederzetting bi'j en haar, maar is eigenlik een variaant van hörst. Een haar is een 'zandige rugge', een hörst is een begruuide heugte.<ref>{{Citeer web|url=https://etymologiebank.nl/trefwoord/haerst|titel=Zoekresultaten|bezochtdatum=2022-06-20|werk=etymologiebank.nl}}</ref><ref>{{Citeer web|url=https://etymologiebank.nl/trefwoord/haar7|titel=Zoekresultaten|bezochtdatum=2022-06-20|werk=etymologiebank.nl}}</ref>
+
 Bi'j de [[Bomhofsplasse]] in Haorste bint in [[1988]] en [[1989]] resten van [[Neanderthaler]]s evunnen. Een bewärkte [[Vuurstien|vuurstienen]] [[voestbiele]] uut et [[Vrog-Weichselien|Vrog]]-[[Weichselien]] is er ook evunnen. Disse voestbiele is meer as 74.000 jaor old. Et blik een slim zelseme vondst te wean die bewiest dät er al meansen (gien Homo sapiens, de medärne means) waren in et [[Vechtdal]] veurdät er hier medärne [[Homo sapiens|meansen]] waren<ref> Atlas van de Vecht, https://issuu.com/provicieoverijssel/docs/atlas_van_de_vecht_lr/56</ref>.
 
 Vrogger was Haorste zompig. In de winter stund het gebied nog wel iens onder wäter, maar in de zommer ko-j er onder aandere koeën vinden. In de jaoren twintig en därtig is het moerassige laandschop verdwenen deurdät de [[Ofsluutdiek]] en et gemaal [[Streukelerziel]] ebouwd wieren.<ref>http://www.plankenloodsje.nl/water.htm</ref> Nao de [[Twiede Wereldoorlog]] bint er tal van boederi'jen ebouwd in Haorste umdet et gebied now dreuger was. 
