--- a/Haorste.mw
+++ b/Haorste.mw
@@ -42,7 +42,7 @@ De Roeten bint een [[kwel]] gebied.
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
-Bestaand:Ontginning, grondbewerking, egaliseren, bezanden, veenproppen, Haerst, Genne, Bestanddeelnr 159-0396.jpg|In Haorste bestiet de baodem uut zowel veane as uut zaand. Op Hasselt an bestiet de baodem uut veane, in Haorste en bi'j verzörgingsplaats Haorste bestiet de baodem juust uut (dek)zaand. Haorsterbroek is een oaverganksgebied.
+Bestaand:Ontginning, grondbewerking, egaliseren, bezanden, veenproppen, Haerst, Genne, Bestanddeelnr 159-0396.jpg|In Haorste bestiet de baodem uut zowel veane as uut zaand. Op Hasselt an bestiet de baodem uut veane, in Haorste en bi'j verzörgingsplaats Haorste bestiet de baodem juust uut (dek)zaand. Haorsterbroek is een oaverganksgebied. De miest linker veanpröp is niet bezaand tiedens de ontginning. Hoe wieder nao rechts hoe meer zaand toe evoegd isse.
 Bestaand:Graftekst Lepejou Haerst Zwolle.JPG|Graf van Lepejou
 Bestaand:A28 Verzorgingsplaats Haerst.JPG|[[Verzörgingsplääts Haorste]] an de [[Rieksweg 28|A28]]
 Bestaand:Ontginning, zaaien en oogsten gewassen, grasland, Haerst, Genne, Bestanddeelnr 160-0265.jpg|Foto uut [[juli]] [[1958]] van Haorste/[[Genne]]
