--- a/Koare.mw
+++ b/Koare.mw
@@ -1,4 +1,5 @@
 [[Bestaand:Wheelbarrow.jpg|thumb|250px|right|Koare]]
+[[Bestaand:Wheelbarrow of 1537 - Stadtmuseum Ingolstadt I.7089 - right- DSC 3000.jpg|thumb|250px|Europa's oudste bewaard gebleven kruiwagen uit Ingolstadt, ca. 1537]]
 n '''Koare''' (ook ''koar'') is n steutwoagen mit ain of twij [[wiel|roader]] dat gebruukt wordt as toenraaive of in de baauw. t Gebruuk van n koare steunt op t principe van n simpele [[hefboom]]. t [[Steunpunt]] ligt aan t ìnde (woar t rad zit). De laden ligt op körte ofstand van dat steunpunt. Op grode ofstand van t steunpunt is doarom n bepoalde (lege) kracht genog om de loaden te rizzen.
 
 Koaren wuiren al in de [[middelaiwen]] gebruukt om swoare dingen te verploatsen. Tegenswoordeg is t veural n toenraaive, dat gebruukt wordt veur t verploatsen van dingen dij stoer te droagen binnen, zo as [[zaand]], grode houveulheden [[onkruud|krödde]] en [[boomblad|bloader]].
